# qtwebgl

client/: CMakeLists.txt  main.cc  main.qml
server/: go.mod  index.html  main.go
